Created new queries to get closest stops and get shape sequence for a trip and a stop. Integrated with application to calculate and display routes. Displaying routes still need to be corrected